Fix logout button verticle alignment

--- a/travel_planner/static/travel_planner/style.css
+++ b/travel_planner/static/travel_planner/style.css
@@ -30,7 +30,7 @@
 }
 
 .logout-button {
-    vertical-align: inherit;
+    vertical-align: bottom;
 }
 
 .add-dest, .save-dest {
